--- a/public/css/responsive/responsive.css
+++ b/public/css/responsive/responsive.css
@@ -346,6 +346,14 @@
         height: 500px;
     }
 
+    #videoHome2 {
+        margin-top: 20px !important;
+    }
+
+    #videoHome iframe{
+        max-width: 100%;
+    }
+
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
@@ -365,4 +373,5 @@
         padding: 30px 10px;
         font-size: 14px;
     }
+
 }
