--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -293,15 +293,15 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div id="videoHome" class="row mx-auto">
 
-                    <div class="col-6">
-                        <h3>Bois David</h3>
-                        <iframe width="400" height="315" src="https://www.youtube.com/embed/a3qzy_-IDcw?controls=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="col-lg-6 col-md-12">
+                        <h3 class="text-white">Bois David</h3>
+                        <iframe  src="https://www.youtube.com/embed/a3qzy_-IDcw?controls=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <div class="col-6">
-                        <h3>Mémorial Acte</h3>
-                        <iframe width="400" height="315" src="https://www.youtube.com/embed/khSc-l4it1g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div id="videoHome2" class="col-lg-6 col-md-12">
+                        <h3 class="text-white">Mémorial Acte</h3>
+                        <iframe src="https://www.youtube.com/embed/khSc-l4it1g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
 
             </div>
